--- a/Game.html
+++ b/Game.html
@@ -8,7 +8,7 @@
         <div class="topnav">              
             <a class="active" href="Game.html">Game Center</a>    
             <a href="bout.html">About</a>              
-            <a href="diep.io">Play it right now</a>        
+            <a href="https://diep.io/">Play it right now</a>        
         </div>
         <h1 >This is the Game Center of Diep.io</h1>
         <h1 id="H2">The game center tell you about Diep.io</h1>
