--- a/Game.html
+++ b/Game.html
@@ -24,5 +24,6 @@
         <img src="agar.jpg">
         <img src="paper.jpg">
         <img src="krunker.jpg">
+        <img src="crazysteve.jpg" width="310">
     </body>    
 </html>
